Fixed the range cursor on the demo page, it was pointing off by a half of the arrow's width.

--- a/index.scss
+++ b/index.scss
@@ -280,7 +280,7 @@ ul.range-scale {
         &::after { // the "pointer" triangle
             content: '';
             position: absolute;
-            left: ($cursorWidth / 2) - $arrowSize;
+            left: ($cursorWidth / 2);
             bottom: -$arrowSize;
             width: 0;
             height: 0;
